2007-05-30	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/streamdata.cpp: add missing #include <assert.h>

2007-05-29	Michael Riepe  <too-tired@users.sourceforge.net>

	* audio_addpts() patch by Wolfram Gloger.

	* Code cleanup + beautification by myself.

	* src/index.cpp: remove false "missing frame" alarms.

2007-05-27	Michael Riepe  <too-tired@users.sourceforge.net>

	* Add batch mode. You can now call "dvbcut -batch <project>.prj"
	  and dvbcut will export the file in your preferred format
	  (default is DVB format using the dvbcut muxer). Note that the
	  project file is essential because it contains the cut list.
	  The name of the output file will be "<project>.mpg". If
	  that file already exists, dvbcut adds numeric suffixes
	  (e.g. "<project>_1.mpg") until the name is unique.

2007-05-13	Michael Riepe  <too-tired@users.sourceforge.net>

	* lavfmuxer.cpp: include patch from Wolfram Gloger.

	* When using the mouse wheel, limit position to [0...pictures-1].

2007-05-09  Sven Over  <svenover@svenover.de>

	* Added generic dvbcut_exception class.

	* Got rid of libavcodec usage in playaudio.cpp. Instead, libmad and
	liba52 are now used. SCons files changed accordingly.

2007-05-06	Michael Riepe  <too-tired@users.sourceforge.net>

	* Remember last used export format.

2007-05-03	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpgfile.cpp: print estimated data rate.

	* strc/index.cpp: changed additional error messages.

2007-04-29	Michael Riepe  <too-tired@users.sourceforge.net>

	* Changed export accelerator to 'E'.

2007-04-13  Sven Over  <svenover@svenover.de>

	* Released version 0.5.4.

2007-03-06	Michael Riepe  <too-tired@users.sourceforge.net>

	* Report missing frames in GOP while indexing.

2007-02-12	Michael Riepe  <too-tired@users.sourceforge.net>

	* Write proper GOP time_code values when exporting.

2007-01-30	Michael Riepe  <too-tired@users.sourceforge.net>

	* Added workaround for div/0 bug in ffmpeg.
